# rusty

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  LICENSE  README.md  SECURITY.md
AIS-core/: CHANGELOG.md  README.md
AIS-lancedb/: CHANGELOG.md  Cargo.toml  README.md
AIS-lancedb/examples/: vector_search_local_ann.rs
AIS-lancedb/examples/fixtures/: lib.rs
AIS-lancedb/src/: lib.rs
AIS-lancedb/src/utils/: deserializer.rs
AIS-mongodb/: Cargo.toml
AIS-neo4j/: CHANGELOG.md  LICENSE
AIS-qdrant/: Cargo.toml
Revicta-core/: CHANGELOG.md  Cargo.toml  README.md
Revicta-lancedb/: CHANGELOG.md  Cargo.toml  README.md
Revicta-mongodb/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
Revicta-neo4j/: CHANGELOG.md  Cargo.toml  README.md
Revicta-qdrant/: CHANGELOG.md  Cargo.toml  README.md
galactica-lancedb/: CHANGELOG.md  Cargo.toml  README.md
galactica-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
galactica-lancedb/examples/fixtures/: lib.rs
galactica-lancedb/src/: lib.rs
galactica-lancedb/src/utils/: deserializer.rs  mod.rs
galactica-lancedb/tests/: integration_tests.rs
galactica-mongodb/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
galactica-mongodb/examples/: vector_search_mongodb.rs
galactica-mongodb/src/: lib.rs
galactica-mongodb/tests/: integration_tests.rs
galactica-neo4j/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
galactica-neo4j/examples/: vector_search_movies_add_embeddings.rs  vector_search_movies_consume.rs  vector_search_simple.rs
galactica-neo4j/examples/display/: lib.rs
galactica-neo4j/src/: lib.rs  vector_index.rs
galactica-neo4j/tests/: integration_tests.rs
integrations/fetch-ai-engine/: README.md  project.json  pyproject.toml
integrations/fetch-ai-engine/examples/: simple_agent.py
integrations/fetch-ai-engine/src/ai_engine/: __init__.py  chitchat.py  dialogue.py  messages.py  types.py
integrations/langchain-seo/: Readme.md  main.py  pyproject.toml
integrations/spotify-integration/: README.md  project.json  pyproject.toml  sportify-agent.py
lumy-lancedb/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
lumy-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
lumy-lancedb/examples/fixtures/: lib.rs
lumy-lancedb/src/: lib.rs
lumy-lancedb/src/utils/: deserializer.rs  mod.rs
lumy-lancedb/tests/: integration_tests.rs
lumy-mongodb/: CHANGELOG.md  Cargo.toml  README.md
lumy-mongodb/examples/: vector_search_mongodb.rs
lumy-mongodb/src/: lib.rs
lumy-mongodb/tests/: integration_tests.rs
nuo-core/nuo-core-derive/: Cargo.toml
nuo-core/nuo-core-derive/src/: embed.rs
nuo-qdrant/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
nuo-qdrant/examples/: qdrant_vector_search.rs
nuo-qdrant/src/: lib.rs
nuo-qdrant/tests/: integration_tests.rs
oxy-lancedb/: CHANGELOG.md  Cargo.toml  README.md
oxy-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
oxy-lancedb/examples/fixtures/: lib.rs
oxy-lancedb/src/: lib.rs
oxy-lancedb/src/utils/: deserializer.rs  mod.rs
oxy-lancedb/tests/: integration_tests.rs
oxy-qdrant/: CHANGELOG.md  Cargo.toml  README.md
oxy-qdrant/examples/: qdrant_vector_search.rs
oxy-qdrant/src/: lib.rs
oxy-qdrant/tests/: integration_tests.rs
precepta-core/precepta-core-derive/: Cargo.toml
precepta-core/precepta-core-derive/src/: embed.rs
precepta-lancedb/: CHANGELOG.md  Cargo.toml  README.md
precepta-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
precepta-lancedb/examples/fixtures/: lib.rs
precepta-lancedb/src/: lib.rs
precepta-lancedb/src/utils/: deserializer.rs  mod.rs
precepta-lancedb/tests/: integration_tests.rs
precepta-mongodb/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
precepta-mongodb/examples/: vector_search_mongodb.rs
precepta-mongodb/src/: lib.rs
precepta-mongodb/tests/: integration_tests.rs
precepta-neo4j/: CHANGELOG.md  Cargo.toml  README.md
precepta-neo4j/examples/: vector_search_movies_add_embeddings.rs  vector_search_movies_consume.rs  vector_search_simple.rs
precepta-neo4j/examples/display/: lib.rs
precepta-neo4j/src/: lib.rs  vector_index.rs
precepta-neo4j/tests/: integration_tests.rs
rusty-lancedb/: CHANGELOG.md  Cargo.toml  README.md
rusty-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
rusty-lancedb/src/: lib.rs
rusty-lancedb/src/utils/: deserializer.rs  mod.rs
rusty-lancedb/tests/: integration_tests.rs
rusty-lancedb/tests/fixtures/: lib.rs
rusty-mongodb/: CHANGELOG.md  Cargo.toml  README.md
rusty-mongodb/examples/: vector_search_mongodb.rs
rusty-mongodb/src/: lib.rs
rusty-mongodb/tests/: integration_tests.rs
zappy-lancedb/: CHANGELOG.md  Cargo.toml  README.md
zappy-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
zappy-lancedb/examples/fixtures/: lib.rs
zappy-lancedb/src/: lib.rs
zappy-lancedb/src/utils/: deserializer.rs  mod.rs
zappy-lancedb/tests/: integration_tests.rs
zappy-neo4j/: CHANGELOG.md  Cargo.toml  README.md
zappy-neo4j/examples/: vector_search_movies_add_embeddings.rs  vector_search_movies_consume.rs  vector_search_simple.rs
zappy-neo4j/examples/display/: lib.rs
zappy-neo4j/src/: lib.rs  vector_index.rs
zappy-neo4j/tests/: integration_tests.rs
zelly-core/zelly-core-derive/: Cargo.toml
zelly-core/zelly-core-derive/src/: embed.rs
zelly-lancedb/: CHANGELOG.md  Cargo.toml  README.md
zelly-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
zelly-lancedb/examples/fixtures/: lib.rs
zelly-lancedb/src/: lib.rs
zelly-lancedb/src/utils/: deserializer.rs  mod.rs
zelly-lancedb/tests/: integration_tests.rs
zelly-mongodb/: CHANGELOG.md  Cargo.toml  README.md
zelly-mongodb/examples/: vector_search_mongodb.rs
zelly-mongodb/src/: lib.rs
zelly-mongodb/tests/: integration_tests.rs
(+1079 files in other folders)
