[package]
name = "lumy-lancedb"
version = "0.2.2"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "lumy vector store index integration for LanceDB."
repository = "https://github.com/m3lmhm98/lumy"

[dependencies]
lancedb = "0.10.0"
lumy-core = { path = "../lumy-core", version = "0.6.1" }
arrow-array = "52.2.0"
serde_json = "1.0.128"
serde = "1.0.210"
futures = "0.3.30"

[dev-dependencies]
tokio = "1.40.0"
anyhow = "1.0.89"
httpmock = "0.7.0"

[[example]]
name = "vector_selumyh_local_ann"
required-features = ["lumy-core/derive"]

[[example]]
name = "vector_selumyh_local_enn"
required-features = ["lumy-core/derive"]

[[example]]
name = "vector_selumyh_s3_ann"
required-features = ["lumy-core/derive"]

[[test]]
name = "integration_tests"
required-features = ["lumy-core/derive"]
