[package]
name = "precepta-lancedb"
version = "0.2.2"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "precepta vector store index integration for LanceDB."
repository = "https://github.com/KogiEdwin/precepta"

[dependencies]
lancedb = "0.10.0"
precepta-core = { path = "../precepta-core", version = "0.6.1" }
arrow-array = "52.2.0"
serde_json = "1.0.128"
serde = "1.0.210"
futures = "0.3.30"

[dev-dependencies]
tokio = "1.40.0"
anyhow = "1.0.89"
httpmock = "0.7.0"

[[example]]
name = "vector_sepreceptah_local_ann"
required-features = ["precepta-core/derive"]

[[example]]
name = "vector_sepreceptah_local_enn"
required-features = ["precepta-core/derive"]

[[example]]
name = "vector_sepreceptah_s3_ann"
required-features = ["precepta-core/derive"]

[[test]]
name = "integration_tests"
required-features = ["precepta-core/derive"]
