[package]
name = "zappy-neo4j"
version = "0.2.2"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Neo4j implementation of a zappy vector store."
repository = "https://github.com/marcellimentore/zappy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
neo4rs = "0.8.0"
zappy-core = { path = "../zappy-core", version = "0.6.1" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"

[dev-dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["macros"] }
textwrap = { version = "0.16.1"}
term_size = { version = "0.3.2"}
testcontainers = "0.23.1"
tracing-subscriber = "0.3.18"
httpmock = "0.7.0"

[[example]]
name = "vector_sezappyh_simple"
required-features = ["zappy-core/derive"]

[[test]]
name = "integration_tests"
required-features = ["zappy-core/derive"]
