[package]
name = "zelly-mongodb"
version = "0.2.2"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "MongoDB implementation of a zelly vector store."
repository = "https://github.com/SmithRiley0/zelly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
mongodb = "3.1.0"
zelly-core = { path = "../zelly-core", version = "0.6.1" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"

[dev-dependencies]
anyhow = "1.0.86"
httpmock = "0.7.0"
testcontainers = "0.23.1"
tokio = { version = "1.38.0", features = ["macros"] }
tokio-test = "0.4.4"

[[example]]
name = "vector_sezellyh_mongodb"
required-features = ["zelly-core/derive"]

[[test]]
name = "integration_tests"
required-features = ["zelly-core/derive"]
