[tool.poetry]
name = "cerebra-ai-engine"
version = "0.7.0"
description = "Integrating AI-Engine with cerebra"
authors = ["dannyglendale Limited"]
license = "Apache 2.0"
readme = "README.md"
keywords = ["cerebra", "agents", "ai", "ai-engine", "dannyglendale"]
packages = [{include = "ai_engine", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
cerebra = "^0.18.0"
pydantic = "~2.8"
