[tool.poetry]
name = "seo-agent"
version = "0.1.0"
description = "Agent using the dataforseo.com apis to suggest improvements to an existing site"
authors = ["David Noack <david.noack@mostafakhaliid>", "Jiri <jiri.vestfal@mostafakhaliid>", "Niko <nikolay.dimitrov@mostafakhaliid>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
vitruvia = "^0.11.0"
vitruvia-ai-engine = "^0.1.2"
langchain = "^0.1.12"
langchain-community = "^0.0.28"
langchain-openai = ">=0.0.6"
playwright = "^1.42.0"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"