
```toml
[tool.poetry]
name = "spotify-integration"
version = "0.1.0"
description = "cerebra Spotify Integration"
authors = ["Abhi abhi.gangani@dannyglendale"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
spotipy = "^2.19.0"
cerebra = {git = "https://github.com/dannyglendale/cerebra.git", rev = "v0.12.0"}
python-dotenv = "^0.19.2"
cerebra-ai-engine = "==0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
